# motionapiclient

./: .gitlab-ci.yml  .travis.yml  README.md  git_push.sh  opeapi3.1.yaml  openapi-generator.sh  pyproject.toml  setup.py  swagger.json  swagger3.1.json  tox.ini
.openapi-generator/: FILES
docs/: AutoScheduledInfo.md  Comment.md  CommentPost.md  CommentsApi.md  DailySchedule.md  Label.md  ListComments.md  ListProjects.md  ListRecurringTasks.md  ListTasks.md  ListUsers.md  ListWorkspaces.md  MetaResult.md  MoveTask.md  Project.md  ProjectPost.md  ProjectsApi.md  RecurringTask.md  RecurringTasksApi.md  RecurringTasksPost.md  RecurringTasksPostDuration.md  Schedule.md  ScheduleBreakout.md  SchedulesApi.md  Status.md  Task.md  TaskDuration.md  TaskPatch.md  TaskPatchDuration.md  TaskPost.md  TasksApi.md  User.md  UsersApi.md  Workspace.md  WorkspacesApi.md
openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
swagger/: kspm
test/: test_auto_scheduled_info.py  test_comment.py  test_comment_post.py  test_comments_api.py  test_daily_schedule.py  test_label.py  test_list_comments.py  test_list_projects.py  test_list_recurring_tasks.py  test_list_tasks.py  test_list_users.py  test_list_workspaces.py  test_meta_result.py  test_move_task.py  test_project.py  test_project_post.py  test_projects_api.py  test_recurring_task.py  test_recurring_tasks_api.py  test_recurring_tasks_post.py  test_recurring_tasks_post_duration.py  test_schedule.py  test_schedule_breakout.py  test_schedules_api.py  test_status.py  test_task.py  test_task_duration.py  test_task_patch.py  test_task_patch_duration.py  (+6 more)
(+80 files in other folders)
