[tool.poetry]
name = "openapi_client"
version = "1.0.0"
description = "Motion REST API"
authors = ["Christopher Queen<christopher.queen@gmail.com>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/gitchrisqueen/motionapiclient"
keywords = ["OpenAPI", "OpenAPI-Generator", "Motion REST API"]
include = ["openapi_client/py.typed"]

[tool.poetry.dependencies]
python = ">=3.7"

urllib3 = ">= 1.25.3, < 2.1.0"
python-dateutil = "*"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
