[tool.poetry]
name = "usemotion_api_client"
version = "1.0.0"
description = "Motion REST API"
authors = ["Christopher Queen <christopher.queen@gmail.com>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/gitchrisqueen/usemotion-api-client"
keywords = ["OpenAPI", "OpenAPI-Generator", "Motion REST API"]
include = ["usemotion_api_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
